Fixed gif alignment

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -8,15 +8,23 @@
   
   :root {
     --dark-green: #1E2827;
+    --black:#141414;
   }
   ul {
     list-style-type: none;
+  }
+
+  body {
+    
+    font-family: 'epilogue', sans-serif;
+    width: 100%;
+    min-height: 100vh;
   }
   
   .container {
     max-width: 375px;
     margin: 0 auto;
-    /* padding: 0 15px; */
+    
   
     @media screen and (min-width: 768px) {
       max-width: 768px;
